	PR tree-optimization/50596 	* tree-vectorizer.h (vect_is_simple_cond): New prototype. 	(NUM_PATTERNS): Change to 6. 	* tree-vect-patterns.c (vect_recog_mixed_size_cond_pattern): New 	function. 	(vect_vect_recog_func_ptrs): Add vect_recog_mixed_size_cond_pattern. 	(vect_mark_pattern_stmts): Don't create stmt_vinfo for def_stmt 	if it already has one, and don't set STMT_VINFO_VECTYPE in it 	if it is already set. 	* tree-vect-stmts.c (vect_mark_stmts_to_be_vectorized): Handle 	COND_EXPR in pattern stmts. 	(vect_is_simple_cond): No longer static.

* lib/target-supports.exp (check_effective_target_vect_cond_mixed):
	New.
	* gcc.dg/vect/vect-cond-8.c: New test.


git-svn-id: svn+ssh://gcc.gnu.org/svn/gcc/trunk@179626 138bc75d-0d04-0410-961f-82ee72b054a4